# heic-converter

./: .gitignore  COLOR_SPACE_GUIDE.md  Cargo.toml  HOMEBREW_PUBLISHING.md  LICENSE  Makefile  PUBLISH_CHECKLIST.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  build.sh  heic2jpg.sh  test_samples.sh
.github/workflows/: release.yml
Formula/: heic2jpg.rb
scripts/: publish.sh
src/: main.rs
