[package]
name = "heic2jpg"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Fast HEIC to JPG converter with multi-core support"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
libheif-rs = "1.0"
walkdir = "2.5"
rayon = "1.10"
anyhow = "1.0"
indicatif = { version = "0.17", features = ["rayon"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "heic2jpg"
path = "src/main.rs"
